NEW: Link layer introduction and error detection/correction

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
     \include{./03_TransportLayer.tex}
     \include{./04_Algorithms.tex}
     \include{./05_NetworkLayer.tex}
-
+    \include{./06_LinkLayer.tex}
     \todo{Mention throughput vs goodput}
 
 \end{document}
