NEW: Section on physical layer

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
     \include{./04_Algorithms.tex}
     \include{./05_NetworkLayer.tex}
     \include{./06_LinkLayer.tex}
+    \include{./07_PhysicalLayer.tex}
     \todo{Mention throughput vs goodput}
 
 \end{document}
