--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{scrartcl}
 
+                    \item
 \usepackage{summary}
 \usepackage{math}
 
@@ -22,6 +23,7 @@
     \include{./05_NetworkLayer.tex}
     \include{./06_LinkLayer.tex}
     \include{./07_PhysicalLayer.tex}
+    \include{./08_RoutingSecurity.tex}
     \todo{Mention throughput vs goodput}
 
 \end{document}
